--- a/chat-service/build.gradle
+++ b/chat-service/build.gradle
@@ -54,9 +54,14 @@ dependencies {
     compile "io.grpc:grpc-netty:${grpcVersion}"
     compile "io.grpc:grpc-protobuf:${grpcVersion}"
     compile "io.grpc:grpc-stub:${grpcVersion}"
-    compile files ('../grpc-chat-api-1.0-SNAPSHOT.jar')
+    compile group: 'org.jetbrains.kotlinx', name: 'kotlinx-coroutines-core', version: '0.30.1'
+    compile group: 'org.jetbrains.kotlinx', name: 'kotlinx-coroutines-guava', version: '0.30.1'
+
+    compile files ('grpc-chat-api-1.0-SNAPSHOT.jar')
 
     testCompile group: 'junit', name: 'junit', version: '4.12'
+    testCompile "io.grpc:grpc-testing:${grpcVersion}"
+    testCompile group: 'com.nhaarman', name: 'mockito-kotlin', version: '1.6.0'
 }
 
 compileKotlin {
@@ -93,5 +98,10 @@ jar {
         attributes(
                 'Main-Class': 'ua.nedz.demo.ChatServerKt'
         )
+    }
+}
+kotlin {
+    experimental {
+        coroutines "enable"
     }
 }
