--- a/vote-service/build.gradle
+++ b/vote-service/build.gradle
@@ -47,7 +47,10 @@ dependencies {
     compile "io.grpc:grpc-netty:${grpcVersion}"
     compile "io.grpc:grpc-protobuf:${grpcVersion}"
     compile "io.grpc:grpc-stub:${grpcVersion}"
-    compile files ('../grpc-chat-api-1.0-SNAPSHOT.jar')
+    compile group: 'org.jetbrains.kotlinx', name: 'kotlinx-coroutines-core', version: '0.30.1'
+    compile group: 'org.jetbrains.kotlinx', name: 'kotlinx-coroutines-guava', version: '0.30.1'
+
+    compile files ('grpc-chat-api-1.0-SNAPSHOT.jar')
 
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
@@ -64,5 +67,10 @@ jar {
         attributes(
                 'Main-Class': 'ua.nedz.demo.VoteServerKt'
         )
+    }
+}
+kotlin {
+    experimental {
+        coroutines "enable"
     }
 }
